Bug 707323 - Story does not handle HTML "page-break-after" correctly.
Summary: Story does not handle HTML "page-break-after" correctly.
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: mupdf (show other bugs)
Version: master
Hardware: PC Windows 10
: P2 normal
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-13 15:33 UTC by Julian Smith
Modified: 2023-11-16 11:52 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
Check Story with page-break-after. (1.60 KB, text/x-csrc)
2023-11-13 15:33 UTC, Julian Smith
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julian Smith 2023-11-13 15:33:12 UTC
Created attachment 25012 [details]
Check Story with page-break-after.

fz_place_story() gets confused if html contains 'page-break-after'. It does not producing a new page, and subsequent text does not appear when the generated PDF is viewed.

[But the subsequent text is present in the generated PDF and can be found using stext.]

Attached test checks that generated PDF has two pages, and assert-fails.
Comment 1 Robin Watts 2023-11-16 11:52:22 UTC
Fixed in:

commit a2d0c1206963939a3cf76abcb958b2cd7d771dcb
Author: Robin Watts <Robin.Watts@artifex.com>
Date:   Wed Nov 15 18:07:15 2023 +0000

    Bug 707323: Fix page-breaks with restarting layout.

    Page breaks were terminating the layout process in unexpected
    ways.

    Also fix page-break-after with tables.