Bug 707323: Fix page-breaks with restarting layout.

Page breaks were terminating the layout process in unexpected
ways.

Also fix page-break-after with tables.